# namesmith

./: .dockerignore  .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
agentic_development_docs/agent_communication/: agent_future_work.md  assumptions.md  future_work.md  implementation_notes_backend.md  workflow_orchestration.md
agentic_development_docs/project_design_plan/: 0_implementation_plan.md  0_project_idea.md  1_prd_architecture_overview.md  2_db_model.md  2_db_model_extended.md  3_prd_api_design_req.md  4_prd_agent_design.md  5_security_testing_deployment.md  6_frontend_design.md  7_current_project_tree_structure.md  7_frontend_console_plan.md  initial_plan.md  redo_auth.md
agentic_development_docs/rules/: rules1.md  rules2.md
agentic_development_docs/tools_documentation/: agno_brief_documentation.txt  agno_full_documentation.txt  langchain_full_doc.md
apps/web/: README.md  eslint.config.mjs  package.json
deploy/: .env.example  DEPLOYMENT.md  POST_DEPLOYMENT.md  SSL_COMPLETE.md  api.Dockerfile  app.env.example  docker-compose.yaml  nginx-http-only.conf  nginx.conf  web.Dockerfile
scripts/: run_migrations.py
services/agents/: executor.py  graph.py  prompts.py  run_local.py  settings.py  state.py
services/agents/nodes/: availability.py  dedupe.py  (+4 more)
services/api/: __init__.py  alembic.ini  auth.py  celery_app.py  dependencies.py  main.py  serializers.py  settings.py  start.sh
tests/: test_build_default_providers.py  test_generation_provider.py  test_serializers.py  test_whoapi_provider.py  test_whoisjson_provider.py
(+75 files in other folders)
