[project]
name = "namesmith-backend"
version = "0.1.0"
description = "Backend services for Namesmith agents and API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "langgraph>=0.0.60",
    "langchain-core>=0.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "python-multipart>=0.0.9",
    "redis>=5.0.4",
    "celery>=5.3.6",
    "openai>=1.35.0",
    "litellm>=1.44.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "namesmith_schemas*"]

[tool.setuptools.package-dir]
namesmith_schemas = "packages/shared_py/namesmith_schemas"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.uv]
package = true
